# phunk

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  todo.md
docs/: conf.py  core.rst  getting_started.rst  index.rst  models.rst
phunk/: __init__.py  core.py  equations.py  geometry.py  logging.py  miriade.py  models.py  plotting.py  reparametrization.py
tests/: run_socca.py  sandbox.ipynb  test_core.py
tests/data/: Eugenia_socca.csv  Eugenia_ztf.csv  Hansenkoharcheck.csv
