[tool.poetry]
name = "space-phunk"
version = "0.1"
description = "Fit photometric phase curves of asteroids."
authors = ["Max Mahlke <max.mahlke@oca.eu>"]
license = "MIT"
readme = "README.md"
homepage = "https://phunk.readthedocs.io/en/latest/"
documentation = "https://phunk.readthedocs.io/en/latest/"
repository = "https://github.com/maxmahlke/phunk.git"
packages = [{ 'include' = 'phunk' }]

[tool.poetry.dependencies]
python = ">=3.8"
numpy = [
  { version = ">=1.24", python = "^3.11" },
  { version = ">=1.21", python = ">=3.7,<3.11" },
]
matplotlib = ">=3.4.3"
astropy = ">=6.0"
space-rocks = ">=1.9"
pandas = ">=1.3.5"
requests = "^2.26.0"
lmfit = ">=1.2.2"
sbpy = ">=0.3"

[tool.poetry.extras]
docs = [
  "furo",
  "sphinx",
  "sphinx-copybutton",
  "sphinx-hoverxref",
  "sphinx-redactor-theme",
  "spinx_design",
]

[tool.poetry.dev-dependencies]
sphinx-redactor-theme = { version = "^0.0.1", optional = true }
sphinx-hoverxref = { version = "*", optional = true }
jinja2 = { version = "<3.1", optional = true }
pytest = "^7.2.1"
pytest-cov = "^4.0.0"

[tool.poetry.group.dev.dependencies]
pytest-sugar = "^0.9.6"

[tool.pytest.ini_options]
addopts = "-v --cov=rocks --cov-report html"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
